# controllers/health_controller.py
@@ -1,0 +1,9 @@
+from flask import jsonify
+
+from db import dbfunctions
+
+
+def get_status():
+    rv = dbfunctions.query("select text from expressions order by random() "
+                           "limit 1")
+    return jsonify(salutation=rv[0][0])
